tests/baselines/reference/asyncQualifiedReturnType_es6.errors.txt
asyncQualifiedReturnType_es6.ts(6,21): error TS1064: The return type of an async function or method must be the global Promise<T> type. Did you mean to write 'Promise<void>'?


==== asyncQualifiedReturnType_es6.ts (1 errors) ====
    namespace X {
        export class MyPromise<T> extends Promise<T> {
        }
    }
    
    async function f(): X.MyPromise<void> {
                        ~~~~~~~~~~~~~~~~~
!!! error TS1064: The return type of an async function or method must be the global Promise<T> type. Did you mean to write 'Promise<void>'?
    }